--- a/.github/workflows/serverless-url-shortener.yml
+++ b/.github/workflows/serverless-url-shortener.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run Unit Tests
         run: |
           . venv/bin/activate
-          pytest tests/
+          PYTHONPATH=. pytest tests/
 
   build-lambda:
     name: Build Lambda Zip Artifacts
