--- a/.github/workflows/serverless-url-shortener.yml
+++ b/.github/workflows/serverless-url-shortener.yml
@@ -98,12 +98,15 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan 
+        run: terraform plan
 
   terraform-apply:
     name: Terraform Apply
     runs-on: ubuntu-latest
     needs: terraform-plan
+    outputs:
+      api_url: ${{ steps.output.outputs.api_url }}
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -129,4 +132,22 @@ jobs:
         run: terraform init
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve 
+        run: terraform apply -auto-approve
+
+      - name: Get API URL Output
+        id: output
+        run: |
+          echo "api_url=$(terraform output -raw api_url)" >> $GITHUB_OUTPUT
+
+  integration-test:
+    name: Integration Test
+    runs-on: ubuntu-latest
+    needs: terraform-apply
+
+    steps:
+      - name: Test the Deployed API
+        run: |
+          echo "Calling deployed API: ${{ needs.terraform-apply.outputs.api_url }}"
+          curl -X POST "${{ needs.terraform-apply.outputs.api_url }}/shorten" \
+            -H "Content-Type: application/json" \
+            -d '{"url": "https://example.com"}'
