--- a/.github/workflows/serverless-url-shortener.yml
+++ b/.github/workflows/serverless-url-shortener.yml
@@ -6,8 +6,6 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  TF_VERSION: 1.6.0
-  PYTHON_VERSION: "3.12"
 
 jobs:
   lint-and-test:
@@ -21,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: ${{ vars.PYTHON_VERSION || '3.12' }}
 
       - name: Install Python dependencies
         run: |
@@ -39,10 +37,55 @@ jobs:
           . venv/bin/activate
           PYTHONPATH=. pytest tests/
 
-  build-lambda:
-    name: Build Lambda Zip Artifacts
+  sonarqube-scan:
+    name: SonarQube Quality Scan
     runs-on: ubuntu-latest
     needs: lint-and-test
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ vars.PYTHON_VERSION || '3.12' }}
+
+      - name: Install Coverage Tool
+        run: |
+          python -m venv venv
+          . venv/bin/activate
+          pip install -r requirements.txt
+          pip install coverage
+
+      - name: Run Coverage Report
+        run: |
+          . venv/bin/activate
+          coverage run -m pytest
+          coverage xml
+
+      - name: Download and Install SonarScanner
+        run: |
+          curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+          unzip sonar-scanner.zip
+          sudo mv sonar-scanner-*/bin/* /usr/local/bin/
+
+      - name: Run SonarQube Scanner
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner \
+            -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }} \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=${{ vars.SONAR_HOST_URL }} \
+            -Dsonar.token=$SONAR_TOKEN \
+            -Dsonar.python.coverage.reportPaths=coverage.xml \
+            -Dsonar.qualitygate.wait=true
+
+  build-lambda:
+    name: Build Lambda Artifacts
+    runs-on: ubuntu-latest
+    needs: sonarqube-scan
 
     steps:
       - name: Checkout Code
@@ -51,7 +94,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Lambda Zips with Docker
+      - name: Build Lambda Zips
         run: |
           chmod +x ./build_lambda_zip.sh
           ./build_lambda_zip.sh create_link.py create_link.zip
@@ -74,7 +117,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Download Artifacts
+      - name: Download Lambda Artifacts
         uses: actions/download-artifact@v4
         with:
           name: lambda-zips
@@ -86,16 +129,15 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: ${{ env.TF_VERSION }}
+          terraform_version: ${{ vars.TF_VERSION || '1.6.0' }}
 
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Validate
-        run: terraform validate
+      - name: Terraform Init & Validate
+        run: |
+          terraform init
+          terraform validate
 
       - name: Terraform Plan
         run: terraform plan
@@ -105,13 +147,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform-plan
     outputs:
-      api_url: ${{ steps.output.outputs.api_url }}
+      api_url: ${{ steps.extract_output.outputs.api_url }}
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Download Artifacts
+      - name: Download Lambda Artifacts
         uses: actions/download-artifact@v4
         with:
           name: lambda-zips
@@ -123,31 +165,56 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: ${{ env.TF_VERSION }}
+          terraform_version: ${{ vars.TF_VERSION || '1.6.0' }}
 
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Apply
+      - name: Terraform Init & Apply
         run: terraform apply -auto-approve
 
-      - name: Get API URL Output
-        id: output
-        run: |
-          echo "api_url=$(terraform output -raw api_url)" >> $GITHUB_OUTPUT
+      - name: Extract API URL
+        id: extract_output
+        run: echo "api_url=$(terraform output -raw api_url)" >> $GITHUB_OUTPUT
 
   integration-test:
-    name: Integration Test
+    name: Integration & Alarm Trigger Test
     runs-on: ubuntu-latest
     needs: terraform-apply
 
     steps:
-      - name: Test the Deployed API
+      - name: Basic API Test
         run: |
           echo "Calling deployed API: ${{ needs.terraform-apply.outputs.api_url }}"
           curl -X POST "${{ needs.terraform-apply.outputs.api_url }}/shorten" \
             -H "Content-Type: application/json" \
             -d '{"url": "https://example.com"}'
+
+      - name: Simulate 5xx Errors to Trigger Alarm
+        run: |
+          for i in {1..20}; do
+            curl -s -o /dev/null -w "%{http_code}\n" "${{ needs.terraform-apply.outputs.api_url }}/fakepath?force_error=true"
+          done
+
+      - name: Send Email on Failure
+        if: failure()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: "CI/CD Pipeline Failed for ${{ github.repository }}"
+          body: |
+            Pipeline failed on branch ${{ github.ref_name }}.
+            Logs: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          to: your.email@example.com
+          from: GitHub Actions <${{ secrets.EMAIL_USERNAME }}>
+          secure: true
+
+      - name: Send Slack Notification on Success
+        if: success()
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data '{"text":"CI/CD pipeline for `${{ github.repository }}` succeeded on branch `${{ github.ref_name }}`."}' \
+          ${{ secrets.SLACK_WEBHOOK }}
