--- a/.github/workflows/serverless-url-shortener.yml
+++ b/.github/workflows/serverless-url-shortener.yml
@@ -112,44 +112,10 @@ jobs:
             create_link.zip
             redirect.zip
 
-  terraform-plan:
-    name: Terraform Plan
+  deploy:
+    name: Terraform Init, Plan & Apply
     runs-on: ubuntu-latest
     needs: build-lambda
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Download Lambda Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: lambda-zips
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ vars.TF_VERSION || '1.6.0' }}
-
-      - name: Terraform Init & Validate
-        run: |
-          terraform init
-          terraform validate
-
-      - name: Terraform Plan
-        run: terraform plan
-
-  terraform-apply:
-    name: Terraform Apply
-    runs-on: ubuntu-latest
-    needs: terraform-plan
     outputs:
       api_url: ${{ steps.extract_output.outputs.api_url }}
 
@@ -174,8 +140,11 @@ jobs:
         with:
           terraform_version: ${{ vars.TF_VERSION || '1.6.0' }}
 
-      - name: Terraform Init & Apply
-        run: terraform apply -auto-approve
+      - name: Terraform Init, Plan & Apply
+        run: |
+          terraform init -reconfigure
+          terraform plan -out=tfplan
+          terraform apply -auto-approve tfplan
 
       - name: Extract API URL
         id: extract_output
@@ -184,20 +153,20 @@ jobs:
   integration-test:
     name: Integration & Alarm Trigger Test
     runs-on: ubuntu-latest
-    needs: terraform-apply
+    needs: deploy
 
     steps:
       - name: Basic API Test
         run: |
-          echo "Calling deployed API: ${{ needs.terraform-apply.outputs.api_url }}"
-          curl -X POST "${{ needs.terraform-apply.outputs.api_url }}/shorten" \
+          echo "Calling deployed API: ${{ needs.deploy.outputs.api_url }}"
+          curl -X POST "${{ needs.deploy.outputs.api_url }}/shorten" \
             -H "Content-Type: application/json" \
             -d '{"url": "https://example.com"}'
 
       - name: Simulate 5xx Errors to Trigger Alarm
         run: |
           for i in {1..20}; do
-            curl -s -o /dev/null -w "%{http_code}\n" "${{ needs.terraform-apply.outputs.api_url }}/fakepath?force_error=true"
+            curl -s -o /dev/null -w "%{http_code}\n" "${{ needs.deploy.outputs.api_url }}/fakepath?force_error=true"
           done
 
       - name: Send Email on Failure
