--- a/.github/workflows/serverless-url-shortener.yml
+++ b/.github/workflows/serverless-url-shortener.yml
@@ -86,8 +86,6 @@ jobs:
             -Dsonar.sourceEncoding=UTF-8 \
             -Dsonar.python.coverage.reportPaths=coverage.xml \
             -Dsonar.qualitygate.wait=true
-
-
   
   build-lambda:
     name: Build Lambda Artifacts
@@ -169,11 +167,10 @@ jobs:
       - name: Simulate 5xx Errors to Trigger Alarm
         run: |
           for i in {1..20}; do
-            curl -s -o /dev/null -w "%{http_code}\n" "${{ needs.deploy.outputs.api_url }}/shorten?force_error=true" \
-              -H "Content-Type: application/json" \
-              -d '{"url": "https://example.com"}'
+            curl -X POST -s -o /dev/null -w "%{http_code}\n" "${{ needs.deploy.outputs.api_url }}/shorten?force_error=true" \
+                -H "Content-Type: application/json" \
+                -d '{"url": "https://example.com"}'
           done
-
       - name: Send Email on Failure
         if: failure()
         uses: dawidd6/action-send-mail@v3
